cabal-version: 3.8
name:          marconi-sidechain-experimental
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        Brendan Brown
maintainer:    brendan.brown@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

common maybe-unix
  if !os(windows)
    build-depends: unix

library
  import:
    lang
    , maybe-unix

  hs-source-dirs:  src
  exposed-modules:
    Marconi.Sidechain.Experimental.Api.HttpServer
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.BurnTokenEvent
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.CurrentSyncedBlock
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.Echo
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.EpochActiveStakePoolDelegation
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.EpochNonce
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.PastAddressUtxo
    Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.TargetAddresses
    Marconi.Sidechain.Experimental.Api.JsonRpc.Routes
    Marconi.Sidechain.Experimental.Api.JsonRpc.Server
    Marconi.Sidechain.Experimental.Api.Rest.Endpoint.Metrics
    Marconi.Sidechain.Experimental.Api.Rest.Routes
    Marconi.Sidechain.Experimental.Api.Rest.Server
    Marconi.Sidechain.Experimental.Api.Types
    Marconi.Sidechain.Experimental.CLI
    Marconi.Sidechain.Experimental.Concurrency
    Marconi.Sidechain.Experimental.Env
    Marconi.Sidechain.Experimental.Error
    Marconi.Sidechain.Experimental.Indexers
    Marconi.Sidechain.Experimental.Run
    Marconi.Sidechain.Experimental.Utils

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core      >=1.2.0
    , marconi-cardano-indexers  >=1.2.0
    , marconi-chain-index       >=1.2.0
    , marconi-core              >=1.2.0
    , marconi-core-json-rpc     >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api           ^>=8.20
    , cardano-crypto-class
    , cardano-ledger-core
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , bytestring
    , directory
    , lens
    , mtl
    , nonempty-containers
    , optparse-applicative
    , pretty-simple
    , prometheus-client
    , servant
    , servant-server
    , stm                   >=2.5
    , text
    , warp

executable marconi-sidechain-experimental
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  --------------------
  -- Local components
  --------------------
  build-depends:  marconi-sidechain-experimental

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:  base >=4.9 && <5

test-suite marconi-sidechain-experimental-test
  import:             lang
  ghc-options:        -Wno-unused-packages
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    Spec.Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.BurnTokenEvent
    Spec.Marconi.Sidechain.Experimental.Api.JsonRpc.Endpoint.PastAddressUtxo
    Spec.Marconi.Sidechain.Experimental.CLI
    Spec.Marconi.Sidechain.Experimental.CLIInputValidation
    Spec.Marconi.Sidechain.Experimental.Routes
    Spec.Marconi.Sidechain.Experimental.Utils

  --------------------
  -- Required local executable
  build-tool-depends:
    marconi-sidechain-experimental:marconi-sidechain-experimental

  --------------------
  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, marconi-cardano-core-test-lib}              >=1.2.0
    , marconi-cardano-indexers:{marconi-cardano-indexers, marconi-cardano-indexers-test-lib}  >=1.2.0
    , marconi-chain-index                                                                     >=1.2.0
    , marconi-core                                                                            >=1.2.0
    , marconi-core-json-rpc                                                                   >=1.2.0
    , marconi-sidechain-experimental

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api             ^>=8.20
    , cardano-api-gen         ^>=8.2
    , cardano-crypto-class
    , cardano-ledger-shelley
    , filepath
    , hedgehog-extras
    , iohk-monitoring
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------

  build-depends:
    , aeson
    , aeson-pretty
    , base                    >=4.9 && <5
    , bytestring
    , containers
    , directory
    , exceptions
    , hedgehog
    , http-client
    , lens
    , mtl
    , nonempty-containers
    , optparse-applicative
    , process
    , resourcet
    , servant
    , servant-client
    , servant-server
    , stm
    , tasty
    , tasty-expected-failure
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , temporary
    , text
    , warp
