cabal-version: 3.0
name:          marconi-doc
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  doc/marconi-as-a-library/tutorials
  exposed-modules: BasicApp

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-chain-index    >=1.2.0
    , marconi-core           >=1.2.0
    , marconi-core-json-rpc  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base            >=4.9 && <5
    , lens
    , mtl
    , servant-server
    , sqlite-simple
    , warp

test-suite marconi-doc-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: doc/marconi-as-a-library/tutorials
  main-is:        BasicAppSpec.hs
  other-modules:  BasicApp

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-chain-index    >=1.2.0
    , marconi-core           >=1.2.0
    , marconi-core-json-rpc  >=1.2.0
    , marconi-doc

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-node-emulator
    , cardano-node-socket-emulator
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base             >=4.9 && <5
    , hedgehog
    , hedgehog-extras
    , lens
    , mtl
    , servant-server
    , sqlite-simple
    , tasty
    , tasty-hedgehog
    , warp
