cabal-version: 3.0
name:          marconi-sidechain-node
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        IOHK
maintainer:    operations@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules: Marconi.Sidechain.Node.Run
  other-modules:   Paths_marconi_sidechain_node
  autogen-modules: Paths_marconi_sidechain_node

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-crypto-class
    , cardano-node               ==8.4.0
    , optparse-applicative-fork

  -- , marconi-chain-index -- Doesn't work yet because current cardano-node version depends on
  -- cardano-api-8.1 and marconi depends on cardano-api-8.20.

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base     >=4.9 && <5
    , network
    , text

executable marconi-sidechain-node
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  ----------------------
  -- Local dependencies
  ----------------------
  build-depends:  marconi-sidechain-node

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:  base >=4.9 && <5
